// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailEntry rendering renders expected elements 1`] = `
<DetailRegion
  label="Test Label"
>
  <div
    className="DetailEntry__value DetailEntry--column"
    id="random-id"
  >
    test value
  </div>
</DetailRegion>
`;

exports[`DetailEntry rendering renders expected elements when children are specified 1`] = `
<DetailRegion
  label="Test Label"
>
  <div
    className="DetailEntry__value DetailEntry--column"
    id="random-id"
  >
    Test Children
  </div>
</DetailRegion>
`;

exports[`DetailEntry rendering renders expected elements when direction is row 1`] = `
<DetailRegion
  label="Test Label"
>
  <div
    className="DetailEntry__value DetailEntry--row"
    id="random-id"
  >
    test value
  </div>
</DetailRegion>
`;

exports[`DetailEntry rendering renders expected elements when optional properties are set 1`] = `
<DetailRegion
  className="TestClass"
  infoText="Test info"
  infoTextPlacement="bottom"
  label="Test Label"
>
  <div
    className="DetailEntry__value DetailEntry--column TestValueClass"
    id="random-id"
    title="TestValueTitle"
  >
    test value
  </div>
</DetailRegion>
`;
